# space-goose

./: .env.example  .gitignore  Dockerfile  README.md  compose-cloudflare.yml  compose.yml  config.yaml
discord/: .dockerignore  .env.example  .gitignore  COMMANDS.md  Dockerfile  QUICKSTART.md  bot.py  config.py  k8s-discord-bot.service  requirements.txt
docs/: KUBERNETES_SETUP.md  KUBERNETES_SETUP_SHARED_INGRESS.md  azure-container-apps-isolated-env-research.md  dagger-azure-container-apps-research.md  discord-bot-implementation-plan.md  discord-bot-mvp-summary.md  discord-python-api-integration.md  github_storage_research.md  implementation-plan-docstrings.md  implementation-plan-global-github-pat.md  ingress_static_ip_migration.md  kubernetes-isolated-env-research.md  mvp-k8s-webapp-node-spec.md  mvp-k8s-webapp-plan.md  mvp-vercel-webapp-plan.md  n8n-api-node-plan.md  plan.md  pod_connectivity_implementation.md  pod_connectivity_implementation_complete.md  rust-goose-api-implementation-plan.md  simplified_implementation.md  (+5 more)
k8s-manager/: .dockerignore  .env.example  Dockerfile  Project_Routes_API_Documentation.md  README.md  blackbox_client.py  config.py  main.py  models.py  pyproject.toml  requirements.txt  server.py  start.sh  tools.py  upload_users.py  vercel.json
k8s-manager/TODO/: extension_implementation.md  github_key_integration.md  session_history_loading.md
k8s-manager/api/: index.py
k8s-manager/routes/: project_routes.py  utils.py
k8s-manager/services/: auth_service.py  k8s_service.py  mongodb_service.py
k8s-manager/templates/: index.html
(+59 files in other folders)
