[project]
name = "space-goose"
version = "0.1.0"
description = "Remote execution of the goose coding agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.117.1",
    "uvicorn>=0.37.0",
    "python-multipart>=0.0.20",
    "jinja2>=3.1.6",
    "kubernetes>=33.1.0",
    "pymongo>=4.15.1",
    "httpx>=0.28.1",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1"
]


[project.scripts]
huuh-mcp = "space_goose.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["space_goose"]
